gccida/g1/convert_regs_2
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3254:4: error: expected ';' after expression
rtx end; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3254:5: error: use of undeclared identifier 'end'
rtx end; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3256:6: error: use of undeclared identifier 'v19'
rtx *v19; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3372:28: error: expected ')'
print_stack( file, ( stack)aux); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3372:12: note: to match this '('
print_stack( file, ( stack)aux); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3405:16: error: use of undeclared identifier 'off_6376D2'
fprintf( file, off_6376D2, ( unsigned int)v15); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3412:1: error: use of undeclared identifier 'end'
end = v34->end; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3413:7: error: use of undeclared identifier 'end'
v18 = end; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3414:17: error: use of undeclared identifier 'end'
if ( *( _WORD *)end == 33 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3415:27: error: use of undeclared identifier 'end'
v18 = (  struct rtx_def *)end[1]; 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3416:14: error: expected expression
v19 = ( rtx *)( FP_mode_reg + 120); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3416:1: error: use of undeclared identifier 'v19'
v19 = ( rtx *)( FP_mode_reg + 120); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3425:17: error: expected identifier or '('
 struct reg_set = s.reg_set; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3430:39: error: use of undeclared identifier 'v19'
v22 = gen_rtx_fmt_ee( SET, VOIDmode, *v19, nan); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/reg-stack.c:3436:1: error: use of undeclared identifier 'v19'
v19 += 59; 
^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_regs_2/src/obj/reg-stack.o] Error 1
